--- a/api-reference/essentials/error_codes.mdx
+++ b/api-reference/essentials/error_codes.mdx
@@ -13,6 +13,23 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 
 | Error Codes | HTTP Status codes                     | Error Type            | Error message                                                                                                                                                       | Error Handling                                                                                                                                                                       |
 | ----------- | ------------------------------------- | --------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| CE_00       | Status codes shared by the connectors | connector_error       | “message”                                                                                                                                                           | The error code and message passed from the connectors. Refer to the respective connector’s documentation for more information on the error                                           |
+| CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                               | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
+| CE_02       | 400                                   | processing_error      | Payment failed during authentication with the connector. Retry payment                                                                                              | Retry the payment again as payment failed at the connector during authentication                                                                                                     |
+| CE_03       | 400                                   | processing_error      | Capture attempt failed while processing with the connector                                                                                                          | Capture failed for the payment at the connector. Please retry the payment                                                                                                            |
+| CE_04       | 400                                   | processing_error      | The card data is invalid                                                                                                                                            | Invalid card data passed. Please pass valid card data                                                                                                                                |
+| CE_05       | 400                                   | processing_error      | The card has expired                                                                                                                                                | Card expired. Please pass valid card data                                                                                                                                            |
+| CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
+| CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
+| CE_08       | 400                                      | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
+| CE_09       | 400                                      | invalid_request_error      | Payout validation failed                                                                                                                                       | Retry the operation again with correct Payout details.                                                                                                                                    |
+| HE_00       | 422,500                                   | server_not_available      | Resource not available right now, Please try again later.                                                                                                         | Please Wait for a few moments and try again. If the error still persists, please reach out to Hyperswitch support                                                                              |                                                                                                                         
+| HE_01       | 400,422                                   | duplicate_request       | Requested operation(Customer, Payments, Merchants, Refunds etc.) for these identifier already exists.                                                              | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                         |
+| HE_02       | 404                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                               |                                                                                                                         
+| HE_03       | 500                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
+| HE_04       | 404                                   | object_not_found          | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                     | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                                                 |
+| HE_05       | 500                                   | processing_error          | Missing or invalid tenant details.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
+| HE_06       | 500                                   | internal_server_error          | Failed to convert amount to a specific type.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
 | IR_00       | 501                                   | server_not_available  | This API is under development and will be made available soon                                                                                                       | No action required. If you require this feature, please reach out to Hyperswitch support                                                                                             |
 | IR_01       | 401                                   | invalid_request_error | API key not provided or invalid API key used. Provide the API key in the Authorization header using api-key (e.g api-key: API_KEY) or create a new API key from the dashboard | Provide the API key in the Authorization header using api-key (e.g api-key: API_KEY) or create a new API key from the dashboard                                                                |
 | IR_02       | 404                                   | invalid_request_error | Unrecognized request URL                                                                                                                                            | Please recheck and enter the correct request URL. Refer to our API documentation                                                                                                        |
@@ -53,22 +70,8 @@ Hyperswitch uses Error codes, types, and messages to communicate errors during A
 | IR_37       | 404                                    | invalid_request_error | "message"                                                                                                                                                           | Check the request for the resource being accessed and ensure it exists.                                                                                                         |
 | IR_38       | 400                                    | invalid_request_error | "message"                                                                                                                                                          | Check for any duplicate entries in the request and correct them.                                                                                                                |
 | IR_39       | 400                                    | invalid_request_error | required payment method is not configured or configured incorrectly for all configured connectors                                                                   | Verify that the required payment method is correctly configured for all connectors in use.                                                                                       |
-| CE_00       | Status codes shared by the connectors | connector_error       | “message”                                                                                                                                                           | The error code and message passed from the connectors. Refer to the respective connector’s documentation for more information on the error                                           |
-| CE_01       | 400                                   | processing_error      | Payment failed during authorization with the connector. Retry payment                                                                                               | Retry the payment again as payment failed at the connector during authorization                                                                                                      |
-| CE_02       | 400                                   | processing_error      | Payment failed during authentication with the connector. Retry payment                                                                                              | Retry the payment again as payment failed at the connector during authentication                                                                                                     |
-| CE_03       | 400                                   | processing_error      | Capture attempt failed while processing with the connector                                                                                                          | Capture failed for the payment at the connector. Please retry the payment                                                                                                            |
-| CE_04       | 400                                   | processing_error      | The card data is invalid                                                                                                                                            | Invalid card data passed. Please pass valid card data                                                                                                                                |
-| CE_05       | 400                                   | processing_error      | The card has expired                                                                                                                                                | Card expired. Please pass valid card data                                                                                                                                            |
-| CE_06       | 400                                   | processing_error      | Refund failed while processing with the connector. Retry refund                                                                                                     | Refund failed to process at the connector. Please retry refund                                                                                                                       |
-| CE_07       | 400                                   | processing_error      | Verification failed while processing with the connector. Retry operation                                                                                            | Retry the operation again as verification failed at the connector                                                                                                                    |
-| CE_08       | 400                                      | processing_error      | Dispute operation failed while processing with connector. Retry operation                                                                                           | Retry the operation again as dispute failed at the connector                                                                                                                                   |
-| CE_09       | 400                                      | invalid_request_error      | Payout validation failed                                                                                                                                       | Retry the operation again with correct Payout details.                                                                                                                                    |
-| HE_00       | 422,500                                   | server_not_available      | Resource not available right now, Please try again later.                                                                                                         | Please Wait for a few moments and try again. If the error still persists, please reach out to Hyperswitch support                                                                              |                                                                                                                         
-| HE_01       | 400,422                                   | duplicate_request       | Requested operation(Customer, Payments, Merchants, Refunds etc.) for these identifier already exists.                                                              | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                         |
-| HE_02       | 404                                   | object_not_found      | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                         | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                               |                                                                                                                         
-| HE_03       | 500                                   | validation_error      | Validation Failed for the requested operation with the given details.                                                                                               | Please verify the details again and enter valid details                                                                                                                      |
-| HE_04       | 404                                   | object_not_found          | Requested object(Customer, Payments, Merchants, Refunds etc.) does not exist in our records                                                                     | Please verify the Details(Customer, Payments, Merchants, Refunds, as applicable on the basis of request) and enter valid details.                                                                                                                 |
-| HE_05       | 500                                   | processing_error          | Missing or invalid tenant details.                                                                                                                               | Please verify the tenant Details and try again.                                                                                                                 |
+| IR_40       | 400                                    | bad_request_error | Payout links cannot be used with this present configuration                                                                   | Verify that the required payment method is correctly configured for all connectors in use.                                                                                       |
+| IR_41       | 400                                    | bad_request | Payout failed while processing with connector.                                                                   | Verify that the required payment method is correctly configured for all connectors in use.                                                                                       |
 | WE_01       | 400                                   | invalid_request_error    | Failed to authenticate the webhook                                                                                                                         | Please verify the authentication credentials and try again.                                                                         |
 | WE_02       | 400                                   | invalid_request_error              | Bad request received in webhook                                                                                                                            | Check the request parameters and format, then try again.                                                                            |
 | WE_03       | 500                                   | router_error       | There was some issue processing the webhook                                                                                                                | Please try again later. If the issue persists, contact Hyperswitch support.                                                                     |
